# companieshouse.watch

./: .env.example  .gitignore  AI_POLICY.md  BUILD_PLAN.md  CLAUDE.md  DATA_MODEL.md  LICENSE  Makefile  OPERATIONS.md  README.md
.github/: dependabot.yml
.github/workflows/: security.yml
apps/llm-gateway/: Dockerfile  pyproject.toml
apps/llm-gateway/src/gateway/: config.py  db.py  main.py  prompts.py  spend.py
apps/streamer/: Dockerfile  pyproject.toml
apps/streamer/src/streamer/: config.py  main.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/src/: globals.d.ts
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/about/: page.tsx
apps/web/src/app/anomalies/: page.tsx
apps/web/src/app/feed/: FeedClient.tsx  page.tsx
apps/web/src/app/legal/: page.tsx
apps/web/src/app/methodology/: page.tsx
apps/web/src/app/search/: page.tsx
apps/web/src/app/support/: page.tsx
apps/web/src/lib/: ch-cache.ts  db.ts  utils.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/worker/: anomaly_detector.py  backfill.py  backfill_companies.py  brave_search.py  bulk_registration.py  ch_rest.py  config.py  db.py  deferred.py  director_velocity.py  http_fetcher.py  hydrator.py  identity_resolver.py  main.py  normaliser.py  officer_churn.py  pattern_detector.py  press_resolver.py  social_poster.py  upserts.py
apps/worker/tests/: test_address_normaliser.py
infra/docker/: Dockerfile.migrate  docker-compose.yml
(+13 files in other folders)
