[project]
name = "llm-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.30",
    "asyncpg>=0.29",
    "redis[asyncio]>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
