[project]
name = "streamer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "redis[asyncio]>=5.0",
    "arq>=0.26",
    "pydantic-settings>=2.4",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamer"]
