[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.26",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "redis[asyncio]>=5.0",
    "pydantic-settings>=2.4",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
